Obfuscate database connection strings in appsettings
Updated connection strings with obfuscated credentials.

--- a/DashBoard/appsettings.json
+++ b/DashBoard/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityDashConnection": " Server=db15058.public.databaseasp.net; Database=db15058; User Id=db15058; Password=Sn2-4?tHJ7=p; Encrypt=False; MultipleActiveResultSets=True;",
-    "DefaultConnection": "Server=db22565.public.databaseasp.net; Database=db22565;  User Id=db22565; Password=P-c86jG!#3qM;  Encrypt=False; MultipleActiveResultSets=True;",
-    "IdentityConnection": "Server=db15275.public.databaseasp.net; Database=db15275; User Id=db15275; Password=9Fk-+n2ZyD?4; Encrypt=False; MultipleActiveResultSets=True;"
+    "IdentityDashConnection": " Server=xxxxx.public.databaseasp.net; Database=xxxxxx; User Id=xxxxxx; Password=xxxxxxx; Encrypt=False; MultipleActiveResultSets=True;",
+    "DefaultConnection": "Server=xxxxxx.public.databaseasp.net; Database=xxxxxxx;  User Id=xxxxxxx; Password=xxxxxxxx;  Encrypt=False; MultipleActiveResultSets=True;",
+    "IdentityConnection": "Server=xxxxxx.public.databaseasp.net; Database=xxxxxxx; User Id=xxxxxxxx; Password=xxxxxxxx; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "BaseApiUrl": "https://dashboardaccount.runasp.net/"
 }
