Replace sensitive data in appsettings.json
Updated connection strings and JWT settings with placeholders for security.

--- a/Acount/appsettings.json
+++ b/Acount/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityConnection": "Server=db15275.public.databaseasp.net; Database=db15275; User Id=db15275; Password=9Fk-+n2ZyD?4; Encrypt=False; MultipleActiveResultSets=True;"
+    "IdentityConnection": "Server=xxxxxxx.public.databaseasp.net; Database=xxxxxx; User Id=xxxxxx; Password=xxxxxxxxx; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "JWT": {
-    "Key": "StrONGKAutHENTICATIONKEy",
-    "ValidIssuer": "https://localhost:7133",
+    "Key": "xxxxxxxxx",
+    "ValidIssuer": "https://localhost:xxxxxxxx",
     "ValidAudience": "MySecuredApiUsers",
     "DurationInDays": "5"
   },
